--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,5 @@ main = "src/index.ts"
 compatibility_date = "2024-08-21"
 compatibility_flags = ["nodejs_compat"]
 
+[observability.logs]
+enabled = true
